# ha-mcp

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: addon-publish.yml  e2e-tests.yml  notify-dev-channel.yml  pr.yml  renovate.yml  semver-release.yml
custom_components/ha_mcp_tools/: __init__.py
homeassistant-addon/: CHANGELOG.md  DOCS.md  Dockerfile  config.yaml  start.py
homeassistant-addon-dev/: Dockerfile  config.yaml
homeassistant-addon/translations/: en.yaml
scripts/: validate_server_manifest.py
site/src/content/clients/: codex.md
src/ha_mcp/: __init__.py  __main__.py  config.py  errors.py
src/ha_mcp/auth/: provider.py
src/ha_mcp/client/: rest_client.py  websocket_client.py
src/ha_mcp/resources/: dashboard_guide.md
src/ha_mcp/tools/: backup.py  device_control.py  helpers.py  registry.py  smart_search.py  tools_addons.py  tools_areas.py  tools_bug_report.py  tools_camera.py  tools_config_automations.py  tools_config_dashboards.py  tools_config_entry_flow.py  tools_config_helpers.py  tools_config_scripts.py  tools_entities.py  tools_filesystem.py  tools_groups.py  tools_hacs.py  tools_history.py  tools_integrations.py  tools_mcp_component.py  tools_registry.py  tools_search.py  tools_service.py  tools_system.py  tools_traces.py  tools_voice_assistant.py  util_helpers.py
src/ha_mcp/utils/: fuzzy_search.py  python_sandbox.py  usage_logger.py
tests/: test_env_manager.py
tests/addon/: test_addon_oidc.py  test_addon_structure.py
tests/src/e2e/: conftest.py
tests/src/e2e/basic/: test_connection.py
tests/src/e2e/tools/: test_deep_search.py  test_search_entities.py
tests/src/e2e/utilities/: assertions.py  wait_helpers.py
tests/src/e2e/workflows/automation/: test_lifecycle.py  test_traces.py
tests/src/e2e/workflows/blueprints/: test_blueprints.py
tests/src/e2e/workflows/config/: test_config_entry_flow.py  test_helper_crud.py
tests/src/e2e/workflows/core/: test_get_states.py  test_history.py
tests/src/e2e/workflows/dashboards/: test_lifecycle.py
tests/src/e2e/workflows/entities/: test_entity_management.py
tests/src/e2e/workflows/filesystem/: test_file_operations.py
tests/src/e2e/workflows/hacs/: test_hacs.py
tests/src/e2e/workflows/integrations/: test_integration_management.py
tests/src/e2e/workflows/registry/: test_device_registry.py  test_entity_rename.py  test_voice_assistant.py
tests/src/e2e/workflows/scripts/: test_lifecycle.py
tests/src/e2e/workflows/system/: test_system_tools.py
tests/src/e2e/workflows/todo/: test_lifecycle.py
tests/src/unit/: test_custom_component_filesystem.py  test_dashboard_find_card_error.py  test_deep_search_error_handling.py  test_graceful_shutdown.py  test_oauth.py  test_oidc_entrypoint.py  test_search_pagination.py  test_tool_annotations.py  test_tool_error_signaling.py  test_tools_camera.py  test_tools_config_scripts.py  test_tools_entities.py  test_tools_filesystem.py  test_tools_get_states.py  test_tools_mcp_component.py  test_tools_resources.py  test_tools_system.py  test_tools_traces.py  test_tools_traces_detail.py  test_tools_voice_assistant.py  test_usage_logger.py  test_wait_helpers.py  test_wait_parameter.py
tests/uat/: run_uat.py
tests/uat/stories/: README.md  TODO.md  conftest.py  run_story.py  test_stories.py
tests/uat/stories/catalog/: s01_automation_sunset_lights.yaml  s02_automation_motion_light.yaml  s03_troubleshoot_automation_not_firing.yaml  s04_dashboard_room_overview.yaml  s05_entity_discovery.yaml  s06_script_goodnight_routine.yaml  s07_automation_update_add_condition.yaml  s08_automation_complex_multicondition.yaml  s09_helper_vacation_mode.yaml  s10_area_organization.yaml  s11_history_analysis.yaml  s12_label_management.yaml
