[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-mcp"
version = "6.6.1"
description = "Home Assistant MCP Server - Complete control of Home Assistant through MCP"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Julien", email = "github@qc-h.net"}
]
keywords = ["mcp", "home-assistant", "ai", "automation", "smart-home"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=2.11.0",
    "httpx[socks]>=0.27.0,<1.0",
    'jq>=1.8.0; sys_platform != "win32"',
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "truststore>=0.10.0",
    "websockets>=12.0",
    "cryptography>=45.0.7",
]

[project.urls]
"Homepage" = "https://github.com/homeassistant-ai/ha-mcp"
"Bug Tracker" = "https://github.com/homeassistant-ai/ha-mcp/issues"
"Repository" = "https://github.com/homeassistant-ai/ha-mcp"

[project.scripts]
ha-mcp = "ha_mcp.__main__:main"
ha-mcp-smoke-test = "ha_mcp.smoke_test:main"
hamcp-test-env = "tests.test_env_manager:main"
ha-mcp-web = "ha_mcp.__main__:main_web"
ha-mcp-sse = "ha_mcp.__main__:main_sse"
ha-mcp-oauth = "ha_mcp.__main__:main_oauth"

[tool.setuptools]
package-dir = {"" = "src", "tests" = "tests"}
packages = { find = { where = ["src", "."], include = ["ha_mcp*", "tests"] } }

[tool.setuptools.package-data]
ha_mcp = ["py.typed", "_pypi_marker", "resources/*.md", "resources/*.json"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["ha_mcp"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
]
ignore_missing_imports = true


[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "RUF100", # unused noqa
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise exceptions with from None/err - non-critical
    "F841",  # local variable assigned but never used
    "B007",  # loop control variable not used within loop body
    "W293",  # blank line contains whitespace
    "W291",  # trailing whitespace
    "F821",  # undefined name (often false positives in complex imports)
    "E722",  # bare except (temporary for cleanup)
    "I001",  # import sorting handled by isort
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["E501", "B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "automation: automation lifecycle tests",
    "calendar: calendar event management tests",
    "device: device control tests",
    "script: script orchestration tests",
    "helper: helper integration tests",
    "convenience: convenience tools tests (scene, weather, energy, docs)",
    "error_handling: error handling and edge case tests",
    "cleanup: tests that create entities needing cleanup",
    "performance: performance measurement and regression tests",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "black>=23.0.0",
    "build>=1.2.2",
    "docker>=7.1.0",
    "isort>=5.12.0",
    "mypy>=1.17.0",
    "psutil>=7.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.8.0",
    "requests>=2.25.0",
    "ruff>=0.12.12",
    "testcontainers>=4.13.0",
]

# Semantic versioning configuration
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "src/ha_mcp/__init__.py:__version__",
]
build_command = """
VERSION=$(grep '^version = ' pyproject.toml | sed 's/version = \"\\(.*\\)\"/\\1/')
sed -i "s/^version: \\\".*\\\"/version: \\\"$VERSION\\\"/" homeassistant-addon/config.yaml
pip install uv && uv lock
git add homeassistant-addon/config.yaml uv.lock
"""
dist_path = "dist/"
upload_to_PyPI = true
upload_to_release = true
remove_dist = false

# Commit message parsing
commit_parser = "angular"
commit_parser_options = { major_tags = ["BREAKING", "!"], minor_tags = ["feat"], patch_tags = ["fix", "perf", "refactor"] }

# Changelog configuration
[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = [
    "^.*\\(site\\).*$",           # Commits with (site) scope
    '''chore\(addon\): [Ss]ync changelog.*''',  # Changelog sync commits
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

# Version scheme
major_on_zero = true
allow_zero_version = false

# Branch and tag configuration
branch = "master"

# Publish configuration (v10 syntax)
[tool.semantic_release.publish]
# GitHub release is created by build-binary.yml workflow to include binaries
upload_to_vcs_release = false
